Fix image aspect ratio on safari

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
+*, *::before, *::after {
+  position: relative;
+}
+
 body {
   background: black;
   color: white;
   font-family: Roboto, sans-serif;
+  font-size: 20px;
   font-weight: 300;
 }
 
@@ -26,9 +31,9 @@ h3 {
 }
 
 h3 {
-  padding-top: 20px;
-  padding-bottom: 10px;
-  font-size: 20px;
+  font-size: 24px;
+  padding-top: 0;
+  padding-bottom: 8px;
 }
 
 img {
@@ -40,153 +45,147 @@ img {
   padding: 0 32px !important;
 }
 
-#landing {
-  position: relative;
-  height: 800px;
-  max-height: 100vh;
-  width: 100%;
-}
-
-.landing-content {
-  position: relative;
-  display: flex;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  z-index: 100;
-}
-
-.event-info {
-  position: relative;
-  flex: 1;
-  padding: 16px;
-  width: 100%;
-  max-width: 360px;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-}
-
-.coming-soon {
-  text-align: center;
-  padding: 10px 22px 6px 32px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  color: white;
-  font-size: 24px;
-  letter-spacing: 6px;
-  line-height: 1.2;
-}
-
 .arrow-btn {
   display: inline-block;
-  position: relative;
-  padding: 10px 22px 6px 32px;
+  padding: 12px 36px;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.5);
   color: rgba(255, 255, 255, 0.9);
   font-size: 24px;
   letter-spacing: 6px;
+  line-height: 1;
   font-weight: 600;
   font-variant: normal;
   text-align: center;
   text-transform: uppercase;
   animation: float-down 3s cubic-bezier(0.165, 0.84, 0.44, 1), fade-in 3s linear;
   animation: zoom-in 2s cubic-bezier(0.165, 0.84, 0.44, 1), fade-in 2s linear;
+
+  &::before,
+  &::after {
+    display: inline-block;
+    position: absolute;
+    font-weight: 300;
+    transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+
+  &::before {
+    left: 24px;
+    content: "〉";
+    transform: translateX(-8px);
+  }
+
+  &::after {
+    right: 16px;
+    content: "〈";
+    transform: translateX(8px);
+  }
+
+  &:hover {
+    cursor: pointer;
+    border-color: white;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.2);
+    text-decoration: none;
+    transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1),
+      opacity 0.25s linear;
+
+    &::before,
+    &::after {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  &:focus,
+  &:active {
+    color: rgba(250, 200, 200, 1);
+    background-color: rgba(203, 0, 0, 0.25);
+    border-color: rgba(203, 0, 0, 1);
+    transition: none;
+    outline: none;
+  }
 }
 
-.arrow-btn::before {
-  position: absolute;
-  left: 24px;
-  font-weight: 300;
-  display: inline-block;
-  content: "〉";
-  transform: translateX(-8px);
-  transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.arrow-btn::after {
-  position: absolute;
-  right: 16px;
-  font-weight: 300;
-  display: inline-block;
-  content: "〈";
-  transform: translateX(8px);
-  transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.arrow-btn:hover {
-  border-color: rgba(255, 255, 255, 1);
-  color: white;
-  cursor: pointer !important;
-  background-color: rgba(255, 255, 255, 0.2);
-  text-decoration: none;
-  transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 0.25s linear;
-}
-
-.arrow-btn:hover::before,
-.arrow-btn:hover::after {
-  transform: translateX(0);
-  opacity: 1;
-}
-
-.arrow-btn:focus,
-.arrow-btn:active {
-  color: rgba(250, 200, 200, 1);
-  background-color: rgba(203, 0, 0, 0.25);
-  border-color: rgba(203, 0, 0, 1);
-  transition: none;
-  outline: none;
-}
-
-#middle-gradient {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.1) 25%,
-    rgba(0, 0, 0, 0.5) 50%,
-    rgba(0, 0, 0, 0.1) 75%,
-    rgba(0, 0, 0, 0) 100%
-  );
-  z-index: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
-  pointer-events: none;
-}
-
-#gradient {
-  position: absolute;
-  top: auto;
-  bottom: 0;
-  left: 0;
-  right: 0;
+#landing {
+  height: 800px;
+  max-height: 100vh;
   width: 100%;
-  height: 100px;
-  z-index: 0;
-  background: linear-gradient(to bottom, transparent 0%, black 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
-  pointer-events: none;
-}
 
-#background {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  overflow: hidden;
-  pointer-events: none;
+  .landing-content {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    z-index: 100;
+
+    .event-info {
+      flex: 1;
+      padding: 16px;
+      width: 100%;
+      max-width: 360px;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+
+      .coming-soon {
+        padding: 12px 36px;
+        background-color: rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        color: white;
+        font-size: 24px;
+        letter-spacing: 6px;
+        line-height: 1.2;
+        text-align: center;
+      }
+    }
+  }
+
+  #middle-gradient, #gradient, #background {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+  }
+
+  #middle-gradient {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.5) 50%,
+      rgba(0, 0, 0, 0) 100%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=0 );
+    z-index: 1;
+  }
+  
+  #gradient {
+    top: auto;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to bottom, transparent 0%, black 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
+    z-index: 0;
+  }
+  
+  #background {
+    z-index: -1;
+    overflow: hidden;
+  }
 }
 
 #about {
-  font-size: 20px;
+  #album-cover {
+    // hack to maintain aspect ratio on safari
+    height: calc(960px / 3.8343558282);
+
+    @media screen and (max-width: 959px) {
+      height: calc(100vw / 3.8343558282);
+    }
+  }
 }
 
 #partners img {
